Uplift January 2026 - Camunda 8.9, Spring Boot 4